# bevygap

./: Cargo.toml  EXTERNAL_EXAMPLES_UPDATE.md  README.md  docker-compose.yml  run_e2e_test.sh  test_lobby_api.sh
.github/: copilot-instructions.md
.github/workflows/: publish-book.yaml  publish-matchmaker-httpd.yaml  publish-matchmaker.yaml  publish-webhook-sink.yaml
bevy_nfws/: Cargo.toml  README.md
bevy_nfws/examples/: wstest.rs
bevy_nfws/src/: lib.rs
bevygap_client_plugin/: Cargo.toml  README.md
bevygap_client_plugin/examples/: connect.rs
bevygap_client_plugin/src/: lib.rs  traits.rs
bevygap_matchmaker/src/: main.rs  session_request_streamer.rs  session_service.rs
bevygap_matchmaker_httpd/: Cargo.toml
bevygap_matchmaker_httpd/src/: lib.rs  lobby.rs  main.rs  session_request_handler_ws.rs
bevygap_matchmaker_httpd/tests/: integration_test.rs
bevygap_server_plugin/: Cargo.toml  README.md
bevygap_server_plugin/src/: bevy_tokio_tasks.rs  edgegap_context.rs  lib.rs  plugin.rs
bevygap_shared/: Cargo.toml  README.md
bevygap_shared/examples/: nats_ca_example.rs  nats_retry_test.rs  test_retry_behavior.rs
bevygap_shared/src/: lib.rs  nats.rs  protocol.rs
bevygap_shared/tests/: test_tls_cert_contents.rs  test_tls_integration.rs
bevygap_webhook_sink/: Cargo.toml
book/: book.toml
book/src/: SUMMARY.md  getting_started.md  introduction.md
book/src/containerizing/: index.md
book/src/development/: index.md
book/src/examples/: index.md
book/src/examples/snake/: client.md  index.md  running.md  server.md  setup.md  shared.md
book/src/installation/: bevygap_nats.md  edgegap.md
edgegap_async/: Cargo.toml
edgegap_async/src/apis/: sessions_api.rs
edgegap_async/src/models/: deployment.rs
examples/snake_multiplayer/: .gitignore  Cargo.toml  README.md
examples/snake_multiplayer/client/: Cargo.toml
examples/snake_multiplayer/client/src/: main.rs
examples/snake_multiplayer/server/: Cargo.toml
examples/snake_multiplayer/server/src/: main.rs
examples/snake_multiplayer/shared/: Cargo.toml
examples/snake_multiplayer/shared/src/: lib.rs
utils/: gen-edgegap-client.sh  remove-caroot-argument.sh  set-caroot-argument.sh
