[package]
name = "bevygap_server_plugin"
edition = "2021"
version.workspace = true
authors.workspace = true
publish = true
license.workspace = true
description = "Plugin for bevy gameservers for use with lightyear on edgegap"
homepage.workspace = true

[dependencies]
bevygap_shared = { workspace = true, features = ["nats", "bevy"] }
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
reqwest.workspace = true
lightyear.workspace = true
async-nats.workspace = true
log.workspace = true

# tokio.workspace = true
# yoinked into a local src file for now due to no published version:
#bevy-tokio-tasks.workspace = true
tokio = { version = "1", features = ["rt", "sync", "full"] }


[lints]
workspace = true
